--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,10 @@ jobs:
          
      - name: Configure my AWS Credentials
        uses: aws-actions/configure-aws-credentials@v1
+       with: 
+        aws-access-key-id: ${{ secrets.My_aws_access_key }}
+        aws-secret-access-key : ${{ secrets.my_aws_secret_key }}
+        aws-region : ${{ env.AWS-REGION_NAME }}
       
       
 
