--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         aws-region : ${{ env.AWS-REGION_NAME }}
      
      - name: Copy Deployment package to s3 bucket
-       run:  aws s3 cp $ {{ DEPLOY_PACKAGE_NAME }} s3://${{ EB_S3_PACKAGE_BUCKET_NAME }}/
+       run:  aws s3 cp $ {{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_S3_PACKAGE_BUCKET_NAME }}/
       
      - name: Print Happy Message for CI part1
        run: echo "CI Pipeline Finished successfull"
