--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
        run: |
         aws elasticbeanstalk create-application-version \
         --application-name ${{ env.EB_APPLICATION_NAME }} \
-        --source-bundle S3bucket="${{ env.EB_S3_PACKAGE_BUCKET_NAME }}",S3key="${{ env.DEPLOY_PACKAGE_NAME }}" \
+        --source-bundle S3Bucket="${{ env.EB_S3_PACKAGE_BUCKET_NAME }}",S3Key="${{ env.DEPLOY_PACKAGE_NAME }}" \
         --version-label "ver-${{ github.sha }}" \
         --description "commitSHA-${{ github.sha }}" 
    
