--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI-CD Elastic beanstalk_AWS
 env:
  EB_S3_PACKAGE_BUCKET_NAME: "dior-app-pythonpackages"
  EB_APPLICATION_NAME      : "My_python_application"
- EB_ENVIRONMENT_NAME      : "Python-env"
+ EB_ENVIRONMENT_NAME      : "MyPythonApplication-env"
  DEPLOY_PACKAGE_NAME      : "python_app_${{ github.sha }}.zip"
  AWS-REGION_NAME          : "us-east-1"
 
